--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Finexo </title>
+  <title> Qfin </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -210,6 +210,10 @@
               </a>
               <a class="" href="team.html">
                 Team
+                </a>
+                <a class="" href="login.html">
+                  Login
+                </a>
               </a>
             </div>
           </div>
